--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /*#region General CSS*/
 body, html {
-    height: 100%;
+    -webkit-text-size-adjust: none;
 }
 
 .no-margin {
@@ -13,7 +13,6 @@ body, html {
 .bg {
     background: url(../Assets/bg.jpg) no-repeat center center fixed;
     background-size: cover;
-    height: 100%;
     overflow: hidden;
     position: fixed;
     z-index: -100;
@@ -22,14 +21,6 @@ body, html {
     width: 100%;
 }
 
-.div-center {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
 /*#endregion General CSS*/
   
 /*#region Button Design*/
@@ -67,11 +58,33 @@ body, html {
 }
 
 .wiki-button {
-    margin-top: 5em;
+    margin-top: 3em;
+}
+
+.reddit-icon {
+    color: #d5513f;
+}
+
+.reddit-text a {
+    text-decoration: none;
+    transition: all 0.2s;
+    cursor: pointer;
+    color: #454545;
+}
+
+.reddit-text a:hover {
+    color: #d5513f;
 }
 /*#endregion Button Design*/
 
 /*#region Text Title Design*/
+.reddit-text {
+    font-family: 'Crimson Pro', serif;
+    font-weight: 700;
+    font-size: 1em;
+    margin-bottom: 2em;
+}
+
 .rose-tulips-liberty-font{
     font-family: 'Crimson Pro', serif;
 }
@@ -89,6 +102,7 @@ body, html {
     font-weight: 700;
     letter-spacing: 0.2em;
     color: #454545;
+    padding-top: 10vh;
     font-size: 1em;
 }
 
@@ -98,10 +112,10 @@ body, html {
     color: #454545;
     font-size: 1em;
     letter-spacing: 0.05em;
-    margin-top: 1.5em;
+    margin-top: 0em;
 }
 
-.rose-tulips-liberty-font::first-letter{
+.big-first-letter::first-letter{
     font-size: 1.5em;
 }
 
@@ -115,14 +129,14 @@ body, html {
 }
 
 .and-text {
-    margin-left: -1.8em;
-    margin-top: -0.5em;
-    font-size: 10em;
+    margin-left: -1.7em;
+    margin-top: -1em;
+    font-size: 11em;
 }
 
 .liberty-text {
-    margin-left: 2.5em;
-    margin-top: -1.9em;
+    margin-left: 2.6em;
+    margin-top: -0.5em;
 }
 
 .and-liberty-div p {
@@ -144,7 +158,7 @@ body, html {
         font-size: 1.5em;
     }
 
-    .rose-tulips-liberty-font::first-letter{
+    .big-first-letter::first-letter{
         font-size: 1.5em;
     }
 
@@ -158,14 +172,14 @@ body, html {
     }
     
     .and-text {
-        margin-left: -1.5em;
-        margin-top: -0.55em;
+        margin-left: -1.7em;
+        margin-top: -1em;
         font-size: 18em;
     }
     
     .liberty-text {
-        margin-left: 2.5em;
-        margin-top: -2.0em;
+        margin-left: 2.6em;
+        margin-top: -0.3em;
     }
 }
 /*#endregion Text Title Design*/
